houston/src/pages/Report.css
.reports-main {
  height: 90vh;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-evenly;
  gap: 20px;
  padding: 20px;
}

.reports-col {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  width: 50%;
  height: 100%;
  gap: 20px;
}

.reports-card {
  background-color: var(--light-bg);
  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.75);
  flex: 1;
  width: 100%;
  border-radius: 25px;
  height: 100%;
  padding: 5px;
}

.reports-cluster-container {
  display: flex;
  flex-direction: column;
  align-items: centers;
  height: 100%;

  overflow-y: scroll;
}

.reports-map {
  min-height: 60%;
  width: 100%;
  resize: vertical;
}
.reports-cluster-bottom-section {
  height: 100%;
}
.reports-cluster-data {
  height: 40%;
  display: flex;
  width: 100%;
}

.reports-cluster-table {
  max-height: 100%;
  border-radius: 25px;
  border: 1px black solid;
  padding: 5px;
  background-color: var(--med-bg);
}
.reports-cluster-table-row {
  cursor: pointer;
}

.reports-cluster-table-row:hover {
  background: var(--light-bg);
}
.reports-table-wrapper {
  overflow-y: scroll;
  height: 100%;
}

.report-detection-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
}

.report-detection-image {
  height: 60%;
  max-height: 60vh;
}
.fetching-interval-slider{
  width: 50%;
}

.reports-control-card{
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 30%;
  padding: 5px;

}
@keyframes loadingbar {
  from{width: 0%; }
  to{width: 100;}
}
.report-detection-card{
  max-height: 60%;
}

